<resources>
    <string name="app_name">Kavach</string>
    <string name="let_s_start">Let’s Start</string>
    <string name="by_proceeding_you_confirm_you_accept_kavach_s_agreement_privacy_policy"><![CDATA[By proceeding, you confirm you accept Kavach’s Agreement & Privacy Policy]]></string>
    <string name="always_be_safe">Always be safe</string>
    <string name="back">Back</string>
    <string name="exponentially_increasing_frauds_with_hyper_growth_in_digitization">Exponentially increasing frauds with hyper growth in digitization</string>
    <string name="more_than_1000cr_lost_to_frauds_last_year">More than <b><font size="20">1000cr</font></b> lost to frauds last year</string>
    <string name="_1_out_of_4_are_victims_of_a_fraud"><b><font size="20">1 out of 4 are victims</font></b>  of a fraud</string>
    <string name="frauds_are_no_longer_limited_to_insecure_websites_or_virus_attacks_we_will_warn_you_if_we_detect_anything_suspicious_fraudulent_which_can_be_an_app_or_a_website_or_a_link_and_much_more">Frauds are no longer limited to insecure websites or virus attacks. We will <b>warn</b> you if we <b>detect</b> anything suspicious/fraudulent which can be an app or a website or a link and much more</string>
    <string name="proceed">Proceed</string>
    <string name="kavach_is_against_showing_ads_even_though_it_can_help_us_sustain_and_maybe_a_lot_more_as_we_believe_privacy_is_a_right_all_of_us_ought_to_have_and_even_more_so_in_the_digital_world_we_don_t_want_to_add_yet_another_tracker_cookie_for_ads_to_be_shown_and_instead_want_to_help_you_delete_and_stop_other_from_tracking_you_incessantly">Kavach is against showing ads even though it can help us sustain(and maybe a lot more) as we believe privacy is a right all of us ought to have and even more so in the digital world. We don’t want to add yet another tracker cookie for ads to be shown and instead want to help you delete and stop other from tracking you incessantly.</string>
    <string name="we_have_the_following_subscriptions_to_help_us_sustain_the_infrastructure_needed_and_provide_you_the_best_shield_of_digital_fraud_protection_keeping_up_with_sophisticated_fraudsters">We have the following subscriptions to help us sustain the infrastructure needed and provide you the best shield of digital fraud protection keeping up with sophisticated fraudsters.</string>
    <string name="introductory_limited_time_offer">Introductory Limited Time Offer!</string>
    <string name="any_url_s_link_shield">Any URL’s / Link Shield</string>
    <string name="no_ads">No Ads</string>
    <string name="introductory_offer_of_free_additional_protections_released_in_the_next_3_months">Introductory offer of free additional protections released in the next 3 months</string>
    <string name="choose_your_plan">Choose Your Plan</string>
    <string name="digital_fraud_protection">Digital fraud Protection</string>
    <string name="rs">Rs</string>
    <string name="_129">129</string>
    <string name="per_year">/ Per Year</string>
    <string name="_2_year">/ 2 Year</string>
    <string name="_209">209</string>
    <string name="news_title">News Title</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_erat_nulla">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed erat nulla...</string>
    <string name="_12_apr_2022">12 Apr 2022</string>
    <string name="protection_from_phishing_fraud_links"><![CDATA[Protection from Phishing & Fraud links]]></string>
    <string name="whatsapp_scam_protection">Whatsapp Scam Protection</string>
    <string name="scan_apps_for_vulnerabilities_protection"><![CDATA[Scan Apps for vulnerabilities & Protection]]></string>
    <string name="wifi_bluetooth_protection"><![CDATA[Wifi & Bluetooth Protection]]></string>
    <string name="latest_news">Latest News</string>
    <string name="_1">1</string>
    <string name="open_accessibility_settings_by_tapping_the_below_button">Open Accessibility Settings by tapping the below button.</string>
    <string name="_2">2</string>
    <string name="tap_installed_apps_or_installed_services_and_select_kavach_digital_protection">Tap Installed Apps or Installed services and Select Kavach Digital Protection.</string>
    <string name="tap_the_toggle_to_give_us_permission">Tap the toggle to give us permission.</string>
    <string name="_3">3</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="privacy_note">Privacy Note</string>
    <string name="by_allowing_a_part_of_the_accessibility_permission_you_permit_kavach_to_scan_the_url_s_visited_in_real_time_only_we_will_not_be_storing_any_personal_information_and_will_not_be_tracking_any_usage_no_data_will_be_shared_with_any_3rd_party_and_we_are_fully_complaint_with_the_security_and_privacy_guidelines">By allowing a part of the accessibility permission, you permit Kavach to scan the URl’s visited in real time only. We will not be storing any personal information and will not be tracking any usage. No data will be shared with any 3rd party and we are fully complaint with the security and privacy guidelines.</string>
    <string name="disagree">Disagree</string>
    <string name="agree">Agree</string>
    <string name="use_kavach_digital_fraud_shield">Use Kavach Digital Fraud Shield</string>
    <string name="use_kavach_digital_fraud_shield_shortcut">Use Kavach Digital Fraud Shield Shortcut</string>
    <string name="kavach_uses_a_part_of_the_android_accessibility_service_to_check_the_url_s_clicked_on_real_time_this_can_protect_you_from_the_rising_frauds_while_feeling_safe_that_no_personal_information_is_collected_or_tracked">Kavach uses a part of the Android Accessibility Service to check the URL’s clicked on real time. This can protect you from the rising frauds while feeling safe that no personal information is collected or tracked.</string>
    <string name="kavach_will_only_use_the_accessibility_service_to_scan_the_url_in_a_browser_real_time_while_browsing_shopping_or_banking_it_cannot_view_or_control_your_screen_at_any_point_as_the_default_notification_of_android_may_show_please_check_our_privacy_policy_and_more_detail_on_permission_accessed_on_our_website">Kavach will only use the accessibility service to scan the URL in a browser real time while browsing, shopping or banking. It cannot view or control your screen at any point as the default notification of android may show. Please check our privacy policy and more detail on permission accessed on our website.</string>
    <string name="save">Save</string>
    <string name="need_limited_permission_to_protect_you">Need limited permission to protect you</string>
    <string name="ok">Ok</string>
</resources>