<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_drawable"
        tools:context=".ui.setting.SettingActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="@dimen/_18ssp">

                <include
                    android:id="@+id/include"
                    layout="@layout/layout_back" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_34sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:srcCompat="@drawable/setting" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        app:cardCornerRadius="@dimen/_12sdp"
                        app:cardElevation="0dp">

                        <TextView
                            style="@style/poppins_semibold_text_style"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/_1" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/maven_pro_regular_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_11ssp"
                        android:layout_marginTop="@dimen/_1sdp"
                        android:text="@string/open_accessibility_settings_by_tapping_the_below_button"
                        android:textSize="@dimen/_15ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        app:cardCornerRadius="@dimen/_12sdp"
                        app:cardElevation="0dp">

                        <TextView
                            style="@style/poppins_semibold_text_style"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/_2" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/maven_pro_regular_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_11ssp"
                        android:layout_marginTop="@dimen/_1sdp"
                        android:text="@string/tap_installed_apps_or_installed_services_and_select_kavach_digital_protection"
                        android:textSize="@dimen/_15ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        app:cardCornerRadius="@dimen/_12sdp"
                        app:cardElevation="0dp">

                        <TextView
                            style="@style/poppins_semibold_text_style"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/_3" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/maven_pro_regular_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_11ssp"
                        android:layout_marginTop="@dimen/_1sdp"
                        android:text="@string/tap_the_toggle_to_give_us_permission"
                        android:textSize="@dimen/_15ssp" />

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSettings"
                    style="@style/maven_pro_semibold_button_style_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="0dp"
                    android:layout_marginTop="@dimen/_38sdp"
                    android:text="@string/go_to_settings" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</layout>