<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sheet_color_pink"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/privacy_note" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_9sdp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/em_garamon_semibold_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_note" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/maven_pro_regular_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:text="@string/by_allowing_a_part_of_the_accessibility_permission_you_permit_kavach_to_scan_the_url_s_visited_in_real_time_only_we_will_not_be_storing_any_personal_information_and_will_not_be_tracking_any_usage_no_data_will_be_shared_with_any_3rd_party_and_we_are_fully_complaint_with_the_security_and_privacy_guidelines"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAgree"
                style="@style/maven_pro_semibold_button_style_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:layout_marginTop="@dimen/_18sdp"
                android:text="@string/agree" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDisagree"
                style="@style/maven_pro_semibold_button_style_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/disagree"
                android:textColor="@color/white"
                app:backgroundTint="@color/sheet_color_pink"
                app:strokeColor="@color/white_50"
                app:strokeWidth="@dimen/_1sdp" />

        </LinearLayout>

    </RelativeLayout>

</layout>