<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.welCome.WelcomeActivity">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/welcome_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:srcCompat="@drawable/logo_kavach" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/maven_pro_regular_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/always_be_safe"
                android:textSize="@dimen/_18ssp" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            style="@style/maven_pro_medium_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnStart"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/by_proceeding_you_confirm_you_accept_kavach_s_agreement_privacy_policy" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStart"
            style="@style/maven_pro_semibold_button_style_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/let_s_start" />

    </RelativeLayout>

</layout>