<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_drawable"
        tools:context=".ui.welCome.WelcomeDetailActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_18sdp">

                <include layout="@layout/layout_back" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/em_garamon_semibold_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:gravity="center"
                    android:text="@string/exponentially_increasing_frauds_with_hyper_growth_in_digitization" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_210sdp"
                    android:layout_marginTop="@dimen/_14ssp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_selected_pager" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/maven_pro_regular_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:gravity="center"
                    android:text="@string/more_than_1000cr_lost_to_frauds_last_year"
                    android:textSize="@dimen/_13ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/dash_line" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/maven_pro_regular_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:gravity="center"
                    android:text="@string/_1_out_of_4_are_victims_of_a_fraud"
                    android:textSize="@dimen/_13ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/info" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/maven_pro_regular_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/frauds_are_no_longer_limited_to_insecure_websites_or_virus_attacks_we_will_warn_you_if_we_detect_anything_suspicious_fraudulent_which_can_be_an_app_or_a_website_or_a_link_and_much_more"
                        android:textSize="@dimen/_12ssp"/>

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnStart"
                    style="@style/maven_pro_semibold_button_style_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="0dp"

                    android:text="@string/proceed" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>