<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_40sdp"

            app:cardBackgroundColor="@color/black_10"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_3sdp"
                    app:cardBackgroundColor="@color/black_10"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="0dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/ivNews"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/maven_pro_semibold_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_7sdp"
                    android:text="@string/news_title"
                    android:textSize="@dimen/_12ssp" />


                <com.google.android.material.textview.MaterialTextView
                    style="@style/maven_pro_regular_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_7sdp"

                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_erat_nulla" />


                <com.google.android.material.textview.MaterialTextView
                    style="@style/maven_pro_regular_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_7sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/_12_apr_2022"
                    android:textColor="@color/white_50"
                    android:textSize="@dimen/_8ssp" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>
</layout>