<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_drawable"
        tools:context=".ui.setting.SettingActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="@dimen/_18ssp">

                <include layout="@layout/layout_back" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_22sdp"
                    app:cardBackgroundColor="@color/black_20"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/white_15"
                    app:strokeWidth="@dimen/_1sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_16sdp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/maven_pro_medium_text_style"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingEnd="@dimen/_30sdp"
                            android:text="@string/use_kavach_digital_fraud_shield" />

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/toggle_off" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:cardBackgroundColor="@color/black_20"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/white_15"
                    app:strokeWidth="@dimen/_1sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_16sdp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/maven_pro_medium_text_style"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingEnd="@dimen/_30sdp"
                            android:text="@string/use_kavach_digital_fraud_shield_shortcut" />

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/toggle_on" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/info" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_11sdp"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/maven_pro_regular_text_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_2sdp"

                            android:lineSpacingExtra="@dimen/_4sdp"
                            android:text="@string/kavach_uses_a_part_of_the_android_accessibility_service_to_check_the_url_s_clicked_on_real_time_this_can_protect_you_from_the_rising_frauds_while_feeling_safe_that_no_personal_information_is_collected_or_tracked"
                            android:textSize="@dimen/_12ssp" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/maven_pro_regular_text_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:lineSpacingExtra="@dimen/_4sdp"
                            android:text="@string/kavach_will_only_use_the_accessibility_service_to_scan_the_url_in_a_browser_real_time_while_browsing_shopping_or_banking_it_cannot_view_or_control_your_screen_at_any_point_as_the_default_notification_of_android_may_show_please_check_our_privacy_policy_and_more_detail_on_permission_accessed_on_our_website"
                            android:textSize="@dimen/_12ssp" />
                    </LinearLayout>


                </LinearLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnStart"
                    style="@style/maven_pro_semibold_button_style_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="0dp"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:text="@string/save" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>